k8s/overlays/localci/patches/be-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be
spec:
  template:
    spec:
      containers:
      - name: be
