k8s/overlays/localci/patches/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: formuladb
  annotations:
    # traefik.ingress.kubernetes.io/redirect-entry-point: https
    # traefik.ingress.kubernetes.io/redirect-permanent: "true"
    kubernetes.io/ingress.class: nginx
    # certmanager.k8s.io/issuer: "formuladb-staging"
spec:
  # tls:
  # - hosts:
  #   - $(NAMESPACE_NAME).formuladb.io
  #   secretName: certificate-formuladb-staging
  rules:
  - host: $(NAMESPACE_NAME).frmdb.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: be
          servicePort: 8084
